k3d-github/.kubefirst/clusters/mgmt-template/components/kubefirst/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubefirst-console
  namespace: kubefirst
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`kubefirst.<DOMAIN_NAME>`)
    services:
    - name: kubefirst-console
      port: 80
  tls:
    secretName: kubefirst-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: kubefirst
spec:
  redirectScheme:
    scheme: https
    permanent: true
